<resources>
    <string name="app_name">Firebase projet</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="email">Email</string>
    <string name="m2">Square meter</string>
    <string name="description">Description</string>
    <string name="floor">Floor</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="town">Town</string>
    <string name="all_towns">All towns</string>
    <string name="create_new_location">Create new location</string>
    <string name="create">Create</string>
    <string name="new_town">New town</string>
    <string name="details_of_the_house">Details of the property</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="details_of_the_location">Details of the location</string>
    <string name="already_registred_text">Already registered? Click here to identify yourself.</string>
    <string name="dont_have_an_account_text">Don\'t have an account yet? Click here to create one.</string>
    <string name="languages">Languages</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>
    <string name="chooselanguages">Choose language</string>
    <string name="about_text">HouseSelling is a mobile application for anyone who wants to sell one or more properties.\n\nSimply create an account and add goods by entering their characteristics. If a city is not proposed automatically, it must be added via the "New town" button.\n\nYou have the possibility to edit your personal data, the characteristics of your property and the localities.\n\nYou can also delete one or more locations, your properties and your user account. Attention, the properties linked to your account are also erased.\n\nThank you for choosing HouseSelling.\n\nEnjoy your visit!</string>
    <string name="hascinema">Has cinema</string>
    <string name="hassportcenter">Has sport center</string>
    <string name="hasswimmingpool">Has swimming pool</string>
    <string name="listofhouse">My houses</string>
    <string name="myaccount">My account</string>
    <string name="input_error_password">Password required</string>
    <string name="input_error_username">Username required</string>
    <string name="input_error_lastname">Lastname required</string>
    <string name="input_error_firstname">Firstname required</string>
    <string name="input_error_email">Email required</string>
    <string name="input_error_email_valid">Invalid email</string>
    <string name="input_error_description">Enter a description</string>
    <string name="input_error_town">Enter a town</string>
    <string name="input_error_creationsuccessful">Creation successful</string>
    <string name="input_error_creationfailed">Creation failed</string>
    <string name="input_error_m2">Enter an area</string>
    <string name="input_error_price">Enter a price</string>
    <string name="input_error_address">Enter an address</string>
    <string name="input_error_updatesuccessful">Update successful</string>
    <string name="input_error_updatefailed">Update failed</string>
    <string name="input_error_failedtodelete">Failed to delete in the database</string>
    <string name="input_error_pleaselogout">Please log out</string>
    <string name="input_error_useralreadylogin">User already login</string>
    <string name="input_error_registrationsuccessful">Registration successful</string>
    <string name="input_error_registrationfailed">Registration failed</string>
    <string name="input_error_cantlogoutfromhere">You can\'t log out from this page</string>
    <string name="input_error_back">Please click BACK again to exit</string>
    <string name="loginsuccessful">Login successful</string>
    <string name="loginfailed">Login failed</string>
    <string name="houses_linked_to_user">There are houses linked to the user</string>
</resources>